# DLNU_CPP_CourseDesign

./:  GameState.cpp   GameState.h  .clang-format  AIFish.cpp  AIFish.h  API_Documentation.md  Button.cpp  Button.h  CMakeLists.txt  ClientSide.cpp  ClientSide.h  Controller.cpp  Controller.h  Fish.cpp  Fish.h  Game.cpp  Game.h  Image.cpp  Image.h  InputHandler.cpp  InputHandler.h  Mixer.cpp  Mixer.h  PlayerFish.cpp  PlayerFish.h  README.md  README_plan.md  Renderer.cpp  Renderer.h  ServerSide.cpp  Text.cpp  Text.h  VERSION.md  Window.cpp  Window.h  main.cpp  prepare_release.bat  resource.rc  源1.cpp
.github/workflows/: android-build.yml  cmake-multi-platform.yml  release.yml
SDL2/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_config_emscripten.h  SDL_config_macosx.h  SDL_config_ngage.h  SDL_config_winrt.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_image.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mixer.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_opengl_glext.h  SDL_opengles2_gl2.h  SDL_opengles2_gl2ext.h  SDL_opengles2_khrplatform.h  (+30 more)
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dlnu/fishgame/: MainActivity.java
api/: README.md
api/lx/include/: AIFish.h  Fish.h  PlayerFish.h  ScoreManager.h  lx_api.h
api/lx/src/: AIFish.cpp  Fish.cpp  PlayerFish.cpp  ScoreManager.cpp
api/lyt/include/: Button.h  Controller.h  Game.h  Image.h  Mixer.h  Music.h  Renderer.h  ResourceLoader.h  Text.h  Window.h  lyt_api.h
api/lyt/src/: Button.cpp  Controller.cpp  Game.cpp  Image.cpp  Music.cpp  Renderer.cpp  ResourceLoader.cpp  Text.cpp  Window.cpp
class_lx/: AIFish.cpp  AIFish.h  Button.cpp  Button.h  Controller.cpp  Controller.h  Fish.cpp  Fish.h  Game.cpp  Game.h  Image.cpp  Image.h  Music.cpp  Music.h  PlayerFish.cpp  PlayerFish.h  Renderer.cpp  Renderer.h  Text.cpp  Text.h  Window.cpp  Window.h  api.h  main.cpp
cmake/: FindSDL2.cmake
lib/dep/plugins/SDL2/cmake/: sdl2-config-version.cmake  sdl2-config.cmake  sdl2_image-config-version.cmake  sdl2_image-config.cmake  sdl2_mixer-config-version.cmake  sdl2_mixer-config.cmake  sdl2_ttf-config.cmake
lib/dep/plugins/SDL2/include/: SDL_atomic.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config_android.h  SDL_config_iphoneos.h  SDL_config_os2.h  SDL_config_wingdk.h  SDL_config_xbox.h  SDL_endian.h  SDL_error.h  SDL_filesystem.h  SDL_hints.h  SDL_image.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_mixer.h  SDL_mutex.h  SDL_opengl.h  SDL_opengl_glext.h  SDL_opengles2_gl2ext.h  SDL_opengles2_khrplatform.h  SDL_pixels.h  SDL_platform.h  SDL_quit.h  SDL_rwops.h  SDL_sensor.h  SDL_shape.h  SDL_test.h  SDL_test_assert.h  SDL_test_common.h  SDL_test_compare.h  SDL_test_crc32.h  SDL_test_images.h  SDL_test_md5.h  SDL_test_random.h  SDL_thread.h  SDL_touch.h  (+3 more)
res/: app.rc
